gitlab/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitlab
  namespace: gitlab
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gitlab.kube.home.ptiteigne.eu`)
      kind: Rule
      services:
        - name: gitlab-webservice-default
          port: 8080
      middlewares:
        - name: forwarded-http
          namespace: ingress
  tls: {}
